# zelf

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: readelf.rs
src/: array.rs  compression.rs  context.rs  dynamic.rs  elf.rs  group.rs  hash.rs  ident.rs  interp.rs  interpret.rs  lib.rs  note.rs  phdr.rs  program.rs  rel.rs  rela.rs  section.rs  shndx.rs  strtab.rs  symtab.rs  utils.rs
tests/: linux.rs
utils/: show.rs
